--- a/jsch-example/pom.xml
+++ b/jsch-example/pom.xml
@@ -3,12 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.millsofmn.example.jsch</groupId>
-	<artifactId>jsch</artifactId>
+	<groupId>org.millsofmn</groupId>
+	<artifactId>jsch-example</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
-	<name>jsch</name>
+	<name>JSCH Example</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
