update jsch to use scp client and put files

--- a/jsch-example/src/main/resources/application.yml
+++ b/jsch-example/src/main/resources/application.yml
@@ -3,3 +3,8 @@ jsch:
   password: ${password}
   host: ${host}
   port: ${port}
+scp:
+  username: ${username}
+  password: ${password}
+  host: ${host}
+  port: ${port}
